--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: sql magic command"
+    "## sql magic command\n",
+    "\n",
+    "It is somewhat nicer to use the sql magic commands:"
    ]
   },
   {
@@ -152,21 +154,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection info needed in SQLAlchemy format, example:\n",
-      "               postgresql://username:password@hostname/dbname\n",
-      "               or an existing connection: dict_keys([])\n",
-      "No module named 'psycopg2'\n",
-      "Connection info needed in SQLAlchemy format, example:\n",
-      "               postgresql://username:password@hostname/dbname\n",
-      "               or an existing connection: dict_keys([])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Connected: @postgres'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql postgresql://postgres@localhost"
+    "%sql postgresql://localhost/postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "\\l"
    ]
   },
   {
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
