--- a/index.ipynb
+++ b/index.ipynb
@@ -170,12 +170,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://localhost/postgres\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>Name</th>\n",
+       "        <th>Owner</th>\n",
+       "        <th>Encoding</th>\n",
+       "        <th>Collate</th>\n",
+       "        <th>Ctype</th>\n",
+       "        <th>Access privileges</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>postgres</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "        <td>UTF8</td>\n",
+       "        <td>en_US.UTF-8</td>\n",
+       "        <td>en_US.UTF-8</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>template0</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "        <td>UTF8</td>\n",
+       "        <td>en_US.UTF-8</td>\n",
+       "        <td>en_US.UTF-8</td>\n",
+       "        <td>=c/tombaldwin<br>tombaldwin=CTc/tombaldwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>template1</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "        <td>UTF8</td>\n",
+       "        <td>en_US.UTF-8</td>\n",
+       "        <td>en_US.UTF-8</td>\n",
+       "        <td>=c/tombaldwin<br>tombaldwin=CTc/tombaldwin</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('postgres', 'tombaldwin', 'UTF8', 'en_US.UTF-8', 'en_US.UTF-8', None),\n",
+       " ('template0',\n",
+       "  'tombaldwin',\n",
+       "  'UTF8',\n",
+       "  'en_US.UTF-8',\n",
+       "  'en_US.UTF-8',\n",
+       "  '=c/tombaldwin\\ntombaldwin=CTc/tombaldwin'),\n",
+       " ('template1',\n",
+       "  'tombaldwin',\n",
+       "  'UTF8',\n",
+       "  'en_US.UTF-8',\n",
+       "  'en_US.UTF-8',\n",
+       "  '=c/tombaldwin\\ntombaldwin=CTc/tombaldwin')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\\l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/tombaldwin\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!psql -d postgres -c '\\! pwd'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://localhost/postgres\n",
+      "Done.\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "drop table actor;\n",
+    "create table actor(\n",
+    " actor_id int primary key,\n",
+    " first_name varchar(50),\n",
+    " last_name varchar(50),\n",
+    " last_update timestamp\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COPY 200\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!psql -d postgres -c \"\\copy actor from 'data/actor.csv' delimiter ',' csv header\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://localhost/postgres\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>actor_id</th>\n",
+       "        <th>first_name</th>\n",
+       "        <th>last_name</th>\n",
+       "        <th>last_update</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Penelope</td>\n",
+       "        <td>Guiness</td>\n",
+       "        <td>2006-02-15 10:05:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Nick</td>\n",
+       "        <td>Wahlberg</td>\n",
+       "        <td>2006-02-15 10:05:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Ed</td>\n",
+       "        <td>Chase</td>\n",
+       "        <td>2006-02-15 10:05:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>Jennifer</td>\n",
+       "        <td>Davis</td>\n",
+       "        <td>2006-02-15 10:05:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>Johnny</td>\n",
+       "        <td>Lollobrigida</td>\n",
+       "        <td>2006-02-15 10:05:00</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'Penelope', 'Guiness', datetime.datetime(2006, 2, 15, 10, 5)),\n",
+       " (2, 'Nick', 'Wahlberg', datetime.datetime(2006, 2, 15, 10, 5)),\n",
+       " (3, 'Ed', 'Chase', datetime.datetime(2006, 2, 15, 10, 5)),\n",
+       " (4, 'Jennifer', 'Davis', datetime.datetime(2006, 2, 15, 10, 5)),\n",
+       " (5, 'Johnny', 'Lollobrigida', datetime.datetime(2006, 2, 15, 10, 5))]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select * from actor limit 5;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## load all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DROP TABLE\n",
+      "CREATE TABLE\n",
+      "COPY 200\n",
+      "psql:data/load_movies.sql:11: NOTICE:  table \"rental\" does not exist, skipping\n",
+      "DROP TABLE\n",
+      "CREATE TABLE\n",
+      "COPY 16044\n",
+      "psql:data/load_movies.sql:23: NOTICE:  table \"film_actor\" does not exist, skipping\n",
+      "DROP TABLE\n",
+      "CREATE TABLE\n",
+      "psql:data/load_movies.sql:29: ERROR:  invalid input syntax for integer: \"1.0\"\n",
+      "CONTEXT:  COPY film_actor, line 2, column film_id: \"1.0\"\n",
+      "psql:data/load_movies.sql:31: NOTICE:  table \"language\" does not exist, skipping\n",
+      "DROP TABLE\n",
+      "CREATE TABLE\n",
+      "COPY 6\n",
+      "psql:data/load_movies.sql:39: NOTICE:  table \"films\" does not exist, skipping\n",
+      "DROP TABLE\n",
+      "CREATE TABLE\n",
+      "COPY 1000\n",
+      "psql:data/load_movies.sql:58: NOTICE:  table \"film_category\" does not exist, skipping\n",
+      "DROP TABLE\n",
+      "CREATE TABLE\n",
+      "psql:data/load_movies.sql:64: ERROR:  invalid input syntax for type double precision: \"Action\"\n",
+      "CONTEXT:  COPY film_category, line 2, column category_id: \"Action\"\n",
+      "psql:data/load_movies.sql:67: NOTICE:  table \"category\" does not exist, skipping\n",
+      "DROP TABLE\n",
+      "CREATE TABLE\n",
+      "psql:data/load_movies.sql:73: data/category.csv: No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "!psql -d postgres -f \"data/load_movies.sql\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://localhost/postgres\n",
+      "7 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>Schema</th>\n",
+       "        <th>Name</th>\n",
+       "        <th>Type</th>\n",
+       "        <th>Owner</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>public</td>\n",
+       "        <td>actor</td>\n",
+       "        <td>table</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>public</td>\n",
+       "        <td>category</td>\n",
+       "        <td>table</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>public</td>\n",
+       "        <td>film_actor</td>\n",
+       "        <td>table</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>public</td>\n",
+       "        <td>film_category</td>\n",
+       "        <td>table</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>public</td>\n",
+       "        <td>films</td>\n",
+       "        <td>table</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>public</td>\n",
+       "        <td>language</td>\n",
+       "        <td>table</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>public</td>\n",
+       "        <td>rental</td>\n",
+       "        <td>table</td>\n",
+       "        <td>tombaldwin</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('public', 'actor', 'table', 'tombaldwin'),\n",
+       " ('public', 'category', 'table', 'tombaldwin'),\n",
+       " ('public', 'film_actor', 'table', 'tombaldwin'),\n",
+       " ('public', 'film_category', 'table', 'tombaldwin'),\n",
+       " ('public', 'films', 'table', 'tombaldwin'),\n",
+       " ('public', 'language', 'table', 'tombaldwin'),\n",
+       " ('public', 'rental', 'table', 'tombaldwin')]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\\dt"
    ]
   },
   {
