clean up index notebook

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Binder with Postgres server\n",
     "\n",
-    "This binder is running a postgres server in the background. Currently, it has only the database that is there by default."
+    "This binder is running a postgres server in the background."
    ]
   },
   {
@@ -197,29 +197,6 @@
     "%%sql\n",
     "select * from actor limit 5;"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO: example code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
